# Projet_L3

./: .gitignore  Compte_rendu.odt  Makefile.am  README.md  arm_branch_other.c  arm_constants.h  arm_data_processing.c  arm_data_processing.h  arm_exception.c  arm_instruction.c  arm_load_store.c  arm_load_store.h  memory.c  registers.c  registers_test.c  test.sh  util.c  util.h
Examples/: Example_branch_bge  Example_branch_bge.s  Example_branch_bgt  Example_branch_bgt.s  Example_branch_bhi  Example_branch_bhi.s  Example_branch_ble  Example_branch_ble.s  Example_branch_bls  Example_branch_bls.s  Example_branch_blt.s  Example_data_adc.s  Example_data_and.s  Example_data_bic.s  Example_data_cmn.s  Example_data_cmp.s  Example_data_eor.s  Example_data_mvn.s  Example_data_orr.s  Example_data_rsb.s  Example_data_rsc.s  Example_data_sbc.s  Example_data_sub.s  Example_data_teq.s  Example_data_tst.s  Makefile.am  aRajouterMakefile  exampleCustom.s  example_and  example_and.s  example_eor  example_ldr.s  exemple_orr.s  insertion_sort.c  test.sh  test_example.sh  test_file.txt  test_mov  test_mov.s  tests.sh
Examples/Test/: test_normal.txt  test_sim.txt
Examples/Test/Trace/: .nfs0000000003a9fb080000004d  trace_example1.txt  trace_sim_example1.txt
